# SignSeq

./: README.md  pyproject.toml
src/: data.py  model.py  train.py
