[project]
name = "signseq"
version = "0.1.0"
description = "Signature Sequence Generation."
authors = [{ name = "Jacob Lin", email = "jacoblincool@gmail.com" }]
dependencies = ["torch", "torchaudio", "datasets", "accelerate"]
readme = "README.md"
requires-python = ">=3.10"

[project.optional-dependencies]
develop = ["pytest", "black", "isort"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
