[project]
name = "signseq"
version = "0.1.0"
description = "Signature Sequence Generation."
authors = [{ name = "Jacob Lin", email = "jacoblincool@gmail.com" }]
dependencies = ["torch", "torchaudio", "datasets", "accelerate", "hf_xet", "tensorboard"]
readme = "README.md"
requires-python = ">=3.10"

[project.optional-dependencies]
develop = ["pytest", "black", "isort"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
